--- a/assets/style.css
+++ b/assets/style.css
@@ -7,12 +7,12 @@ body {
 thead {
 	background-color: lightsteelblue;
 	text-align: center;
+	border: 2px solid lightgrey;
 }
 
 tbody {
 	text-align: center;
 }
-
 
 .container-fluid {
 	background-color: lightsteelblue;
@@ -21,15 +21,32 @@ tbody {
 .header {
 	text-align: center;
 	position: relative;
-	left: 38%;
+	left: 40%;
 }
 
 .table-big {
 	margin: 1%;
+
+}
+
+.form-header {
+	background-color: lightsteelblue;
+	border: 2px solid lightgrey;
+	width: 95%;
+	padding: 0.5% 0;
+	position: relative;
+	left: 2%;
+	text-align: center;
+}
+
+.form-group {
+	width: 95%;
+	padding: 0.5% 0;
+	position: relative;
+	left: 2%;	
 }
 
 .form {
-	border-top: 1px solid #777;
 	padding: 1% 0;
 }
 
